--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- Navbar -->
+      <nav>
+        <div>
+          <img src="./images/white-logo.png" alt="logo" class="logo" />
+        </div>
+        <ul class="lists">
+          <li class="list-item">Home</li>
+          <li class="list-item">About Us</li>
+          <li class="list-item">Pages</li>
+          <li class="list-item">Agent</li>
+          <li class="list-item">Blog</li>
+          <li class="list-item">Subscribe</li>
+        </ul>
+        <button class="btn">Let's Talk</button>
+      </nav>
+    </header>
+  </body>
 </html>
