--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
@@ -24,6 +31,32 @@
         </ul>
         <button class="btn">Let's Talk</button>
       </nav>
+
+      <main>
+        <div class="container">
+          <div class="image">
+            <img src="./images/meeting.png" alt="meeting" />
+          </div>
+          <div class="heading">
+            <h1>
+              Empowering Your <br />
+              business with the <br />
+              best solution
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              <br />
+              doloribus voluptas, laboriosam nihil rem numquam ducimus <br />
+              perferendis iure. Corrupti molestiae doloribus dolorum <br />
+            </p>
+            <form>
+              <i class="fa-solid fa-envelope"></i>
+              <input type="email" placeholder="Enter your email address" />
+              <button>Let' Talk</button>
+            </form>
+          </div>
+        </div>
+      </main>
     </header>
   </body>
 </html>
