--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
               best solution
             </h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              <br />
-              doloribus voluptas, laboriosam nihil rem numquam ducimus <br />
-              perferendis iure. Corrupti molestiae doloribus dolorum <br />
+              We connect your brand and businesses with your target <br />
+              market in the most desirable, refined and elevated way <br />
+              possible through digital medium
             </p>
             <form>
               <i class="fa-solid fa-envelope"></i>
@@ -58,5 +57,101 @@
         </div>
       </main>
     </header>
+
+    <section class="section-1">
+      <h1>
+        We Connect your businesses <br />
+        with your target
+      </h1>
+      <div class="rates">
+        <div class="rate">
+          <h1>1,093</h1>
+          <p>Finished Project</p>
+        </div>
+        <div class="rate">
+          <h1>3,355</h1>
+          <p>Enrolled Project</p>
+        </div>
+        <div class="rate">
+          <h1>40</h1>
+          <p>Team Worker</p>
+        </div>
+        <div class="rate">
+          <h1>90%</h1>
+          <p>Satisfaction Rate</p>
+        </div>
+      </div>
+      <div class="image-2">
+        <img src="./images/pexels-fauxels-3184325.jpg" alt="meeting" />
+      </div>
+    </section>
+
+    <section class="section-2">
+      <h1>
+        We have made your <br />
+        care easy for you
+      </h1>
+      <div class="wrapper">
+        <div class="content">
+          <h1>
+            Effective Website Design <br />
+            and Development
+          </h1>
+          <p>
+            By connecting patients all over the world to the best <br />
+            instructors. Healthycare helping individuals to reach their <br />
+            goals and pursue there dreams
+          </p>
+          <button class="btn">Let' Talk</button>
+        </div>
+        <div class="image-3">
+          <img src="./images/pexels-fauxels-3184405.jpg" alt="image" />
+        </div>
+      </div>
+    </section>
+
+    <section class="section-2">
+      <div class="wrapper">
+        <div class="image-3">
+          <img src="./images/member-image2.jpg" alt="image" />
+        </div>
+        <div class="content">
+          <h1>
+            We Give Proven Digital <br />
+            Marketing Strategies for <br />
+            Our Clients
+          </h1>
+          <p>
+            Consultant working hard and we collaborate with <br />
+            organizations that are keen transform the legal industry. <br />
+            reach their goals and pursue their dreams.
+          </p>
+          <button class="btn">Let' Talk</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-2">
+      <div class="wrapper">
+        <div class="content">
+          <h1>
+            People Will Always Judge <br />
+            the book by it's cover
+          </h1>
+          <p>
+            By connecting patients all over the world to the best <br />
+            instructors. Healthycare helping individuals to reach their <br />
+            goals and pursue there dreams
+          </p>
+          <button class="btn">Let' Talk</button>
+        </div>
+        <div class="image-3">
+          <img
+            src="./images/pexels-linkedin-sales-navigator-2182969.jpg"
+            alt="image"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
