--- a/index.html
+++ b/index.html
@@ -153,5 +153,66 @@
         </div>
       </div>
     </section>
+
+    <section class="section-3">
+      <div class="team-description">
+        <h1>
+          Meets our great <br />
+          Creative Teams
+        </h1>
+        <p>
+          Our journey began with simple idea make a simpla <br />
+          journey make this world more function. We collaborate <br />
+          with organizations that are keen transform
+        </p>
+      </div>
+      <div class="teams">
+        <div class="team-member">
+          <div class="image-4">
+            <img
+              src="./images/member-image-4.jpg"
+              alt="team-member"
+              class="member-1"
+            />
+          </div>
+          <h4>Amera Amanda</h4>
+          <p>
+            Introduction start procastinate 2 hours to get <br />
+            to do work get to do work while eating
+          </p>
+        </div>
+        <div class="team-member">
+          <div class="image-4">
+            <img
+              src="./images/member-image3 (1).jpg"
+              alt="team-member"
+              class="member-2"
+            />
+          </div>
+          <h4>Lucas Podolski</h4>
+          <p>
+            Introduction start procastinate 2 hours to get <br />
+            to do work get to do work while eating
+          </p>
+        </div>
+        <div class="team-member">
+          <div class="image-4">
+            <img
+              src="./images/member-image1.jpg"
+              alt="team-member"
+              class="member-3"
+            />
+          </div>
+          <h4>Leny Marissa Nasution</h4>
+          <p>
+            Introduction start procastinate 2 hours to get <br />
+            to do work get to do work while eating
+          </p>
+        </div>
+      </div>
+      <div class="center">
+        <button>See More</button>
+      </div>
+    </section>
   </body>
 </html>
