--- a/index.html
+++ b/index.html
@@ -214,5 +214,60 @@
         <button>See More</button>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="content">
+        <div class="top">
+          <div class="logo-details">
+            <img src="./images/white-logo.png" alt="logo" class="logo" />
+          </div>
+          <div class="media-icons">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="link-boxes">
+          <ul class="box">
+            <li class="link_name">Our Products</li>
+            <li><a href="#">The Support Suite</a></li>
+            <li><a href="#">The Sales Suite</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Guide</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Top Features</li>
+            <li><a href="#">Ticketing System</a></li>
+            <li><a href="#">Knowledge Base</a></li>
+            <li><a href="#">Community Forums</a></li>
+            <li><a href="#">Help Desk Software</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Resources</li>
+            <li><a href="#">Product Support</a></li>
+            <li><a href="#">Request Demo</a></li>
+            <li><a href="#">Library</a></li>
+            <li><a href="#">Business Blog</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Company</li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Investors</a></li>
+            <li><a href="#">Events</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Favorite Things</li>
+            <li><a href="#">For Enterprise</a></li>
+            <li><a href="#">For Startups</a></li>
+            <li><a href="#">For Benchmarks</a></li>
+            <li><a href="#">For Small Business</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
