website made responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/media.css" />
     <title>Document</title>
   </head>
   <body>
@@ -102,7 +103,9 @@
             instructors. Healthycare helping individuals to reach their <br />
             goals and pursue there dreams
           </p>
-          <button class="btn">Let' Talk</button>
+          <div class="button">
+            <button class="btn">Let' Talk</button>
+          </div>
         </div>
         <div class="image-3">
           <img src="./images/pexels-fauxels-3184405.jpg" alt="image" />
@@ -126,7 +129,9 @@
             organizations that are keen transform the legal industry. <br />
             reach their goals and pursue their dreams.
           </p>
-          <button class="btn">Let' Talk</button>
+          <div class="button">
+            <button class="btn">Let' Talk</button>
+          </div>
         </div>
       </div>
     </section>
@@ -143,7 +148,9 @@
             instructors. Healthycare helping individuals to reach their <br />
             goals and pursue there dreams
           </p>
-          <button class="btn">Let' Talk</button>
+          <div class="button">
+            <button class="btn">Let' Talk</button>
+          </div>
         </div>
         <div class="image-3">
           <img
